--- a/package.json
+++ b/package.json
@@ -16,13 +16,15 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "type": "module",
   "devDependencies": {
+    "nodemon": "^3.1.0",
     "sequelize-cli": "^6.6.2"
   }
 }
