--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.11.5",
     "pg-hstore": "^2.3.4",
+    "proj4": "^2.11.0",
     "sequelize": "^6.37.2"
   },
   "name": "seoul-new-arrivals",
